--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -112,21 +112,21 @@
                            <label class="form-label fw-bold">Posto/Graduação</label>
                            <select class="form-control mb-2" id="postoGrad">
                               <option value="">Selecione</option>
-                              <option value="SD">SD.</option>
-                              <option value="CB">CB.</option>
-                              <option value="3º SGT">3º SGT.</option>
-                              <option value="2º SGT">2º SGT.</option>
-                              <option value="1º SGT">1º SGT.</option>
-                              <option value="SUB TEN.">ST.</option>
+                              <option value="SD. PM">SD. PM</option>
+                              <option value="CB. PM">CB. PM</option>
+                              <option value="3º SGT. PM">3º SGT. PM</option>
+                              <option value="2º SGT. PM">2º SGT. PM</option>
+                              <option value="1º SGT PM">1º SGT. PM</option>
+                              <option value="SUB TEN. PM">SUB TEN. PM</option>
                               <option value="2º TEN. QOPM">2º TEN. QOPM</option>
                               <option value="2º TEN. QOAPM">2º TEN. QOAPM</option>
                               <option value="1º TEN. QOPM">1º TEN. QOPM</option>
-                              <option value="1º TEN. QOPM">1º TEN. QOAPM</option>
+                              <option value="1º TEN. QOAPM">1º TEN. QOAPM</option>
                               <option value="CAP. QOPM">CAP. QOPM</option>
-                              <option value="CAP. QOAPM">CAP QOAPM.</option>
+                              <option value="CAP. QOAPM">CAP. QOAPM</option>
                               <option value="MAJ. QOPM">MAJ. QOPM</option>
-                              <option value="MAJ. QOAPM">MAJ. QOAPM</option>
-                              <option value="TEN CEL.">TEN. CEL.</option>
+                              <option value="MAJ QOAPM">MAJ. QOAPM</option>
+                              <option value="TEN. CEL.">TEN. CEL.</option>
                               <option value="CEL.">CEL.</option>
                            </select>
                         </div>
