--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -26,19 +26,32 @@
 
    .table-container table {
       width: 100%;
+      border-collapse: separate; /* Muda para separate para evitar sobreposição de bordas */
+      border-spacing: 0; /* Remove qualquer espaçamento entre as células */
    }
 
    .table-container th,
    .table-container td {
       word-wrap: break-word;
       white-space: nowrap;
+      border: none !important; /* Remove qualquer borda padrão das células */
    }
 
    .table-container thead th {
       position: sticky;
       top: 0;
-      background-color: #fff;
+      background-color: rgb(231, 161, 9); /* Fundo laranja para o thead */
+      color: white; /* Texto branco para contraste */
+      border-left: 1px solid white !important; /* Borda branca à esquerda para todas as colunas */
+      border-right: none !important; /* Remove borda à direita */
+      border-top: none !important; /* Remove borda superior */
+      border-bottom: 1px solid white !important; /* Adiciona uma borda inferior branca para separação */
       z-index: 1;
+   }
+
+   /* Garante que a última coluna não tenha borda à direita */
+   .table-container thead th:last-child {
+      border-right: none !important;
    }
 
    .btn-action {
@@ -58,10 +71,6 @@
 
    .w-90 {
       width: 90% !important;
-   }
-
-   .thead-success {
-      background-color: green !important;
    }
 
    /* Media Query para notebooks */
@@ -91,18 +100,18 @@
          </div>
          <div class="table-container">
             <table class="table table-striped table-hover mb-0">
-               <thead class="thead-success">
+               <thead>
                   <tr>
-                     <th class="text-center">ID</th>
-                     <th class="text-center">Data da Saída</th>
-                     <th>Descrição</th>
-                     <th class="text-center">Tombo</th>
-                     <th class="text-center">Destino</th>
-                     <th class="text-center">NUP (Suite)</th>
-                     <th class="text-center">Termo de Entrega</th>
-                     <th class="text-center">Doc Origem</th>
-                     <th class="text-center">Valor</th>
-                     <th class="text-center">Vizualizar</th>
+                     <th class="text-center px-0">ID</th>
+                     <th class="text-center px-0">Data da Saída</th>
+                     <th class="text-center px-0">Descrição</th>
+                     <th class="text-center px-0">Tombo</th>
+                     <th class="text-center px-0">Destino</th>
+                     <th class="text-center px-0">NUP (Suite)</th>
+                     <th class="text-center px-0">Termo de Entrega</th>
+                     <th class="text-center px-0">Doc Origem</th>
+                     <th class="text-center px-0">Valor</th>
+                     <th class="text-center px-0">Vizualizar</th>
                   </tr>
                </thead>
                <tbody>
