--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -26,19 +26,31 @@
 
    .table-container table {
       width: 100%;
+      border-collapse: separate;
+      border-spacing: 0;
    }
 
    .table-container th,
    .table-container td {
       word-wrap: break-word;
       white-space: nowrap;
+      border: none !important;
    }
 
    .table-container thead th {
       position: sticky;
       top: 0;
-      background-color: #fff;
+      background-color: rgb(231, 161, 9);
+      color: white;
+      border-left: 1px solid white !important;
+      border-right: none !important;
+      border-top: none !important;
+      border-bottom: 1px solid white !important;
       z-index: 1;
+   }
+
+   .table-container thead th:last-child {
+      border-right: none !important;
    }
 
    .btn-action {
@@ -60,11 +72,6 @@
       width: 90% !important;
    }
 
-   .thead-success {
-      background-color: green !important;
-   }
-
-   /* Media Query para notebooks */
    @media (max-width: 1366px) {
       .caixa-externa {
          max-height: 73vh;
@@ -102,21 +109,20 @@
             </div>
          </div>
 
-         <!-- tabelaEstoque.ejs -->
          <div class="table-container">
             <table class="table table-striped table-hover mb-0">
                <thead class="thead-success">
-                  <tr>
-                     <th class="text-center">ID</th>
-                     <th class="text-center">Entrada</th>
-                     <th class="text-center">Descrição</th>
-                     <th class="text-center">Tombo</th>
-                     <th class="text-center">Categoria</th>
-                     <th class="text-center">Estoque</th>
-                     <th class="text-center">Situação</th>
-                     <th class="text-center">Doc De Origem</th>
-                     <th class="text-center">Valor</th>
-                     <th class="text-center">Ações</th>
+                  <tr class="table-borderless">
+                     <th class="text-center table-borderless px-0">ID</th>
+                     <th class="text-center table-borderless px-0">Entrada</th>
+                     <th class="text-center table-borderless px-0">Descrição</th>
+                     <th class="text-center table-borderless px-0">Tombo</th>
+                     <th class="text-center table-borderless px-0">Categoria</th>
+                     <th class="text-center table-borderless px-0">Estoque</th>
+                     <th class="text-center table-borderless px-0">Situação</th>
+                     <th class="text-center table-borderless px-0">Doc De Origem</th>
+                     <th class="text-center table-borderless px-0">Valor</th>
+                     <th class="text-center table-borderless px-0">Ações</th>
                   </tr>
                </thead>
                <tbody>
@@ -133,7 +139,7 @@
                            <td class="py-1 text-center"><%= item.doc_origem %></td>
                            <td class="py-1 text-center"><%= item.valor %></td>
                            <td class="py-1 text-center">
-                              <a href="/estoque/visualizar/<%= item.id %>" class="btn btn-secondary btn-sm view-btn btn-action">Detalhes</a>
+                              <button type="button" class="btn btn-secondary btn-sm btn-action" data-id="<%= item.id %>">Detalhes</button>
                               <a href="/excluir/<%= item.id %>" class="btn btn-danger btn-sm btn-action btn-delete">Excluir</a>
                            </td>
                         </tr>
@@ -152,51 +158,52 @@
    <!-- JavaScript para exibição do modal -->
    <script>
       document.addEventListener('DOMContentLoaded', () => {
-         const viewButtons = document.querySelectorAll('.view-btn');
-
+         const viewButtons = document.querySelectorAll('.btn-action');
          viewButtons.forEach(button => {
             button.addEventListener('click', async (event) => {
-               event.preventDefault();
-               const url = event.target.href;
+               const itemId = event.target.getAttribute('data-id');
+               const url = `/estoque/visualizar/${itemId}`;
                try {
+                  console.log("Fetching data for item ID:", itemId);
                   const response = await fetch(url);
+                  if (!response.ok) {
+                     throw new Error(`ERRO: ${response.statusText.toUpperCase()}`);
+                  }
                   const item = await response.json();
-
+                  console.log("Data fetched:", item);
                   if (item) {
                      const modalHtml = `
                         <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                           <div class="modal-content">
-                              <div class="modal-header bg-success text-white d-flex justify-content-between">
-                              <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
-                              <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
-                                 <i class="fa fa-times fa-lg"></i>
-                              </button>
-                              </div>
-                              <div class="modal-body">
-                              <div class="card">
-                                    <div class="card-body pb-0">
-                                    <h5 class="card-title">${item.descricao}</h5>
-                                    <p class="card-text">
-                                       <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
-                                       <strong>ID:</strong> ${item.id} <br/>
-                                       <strong>Tombo:</strong> ${item.tombo} <br/>
-                                       <strong>Data de Entrada:</strong> ${new Date(item.data_de_entrada).toLocaleDateString('pt-BR')} <br/>
-                                       <strong>Categoria:</strong> ${item.categoria} <br/>
-                                       <strong>Doc Origem:</strong> ${item.doc_origem} <br/>
-                                       <strong>Estoque:</strong> ${item.estoque} <br/>
-                                       <strong>Valor:</strong> ${parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })} <br/>
-                                       <strong>Situação:</strong> ${item.situacao} <br/>
-                                       <strong>Observação:</strong> ${item.observacao || 'N/A'} <br/>
-                                    </p>
+                              <div class="modal-content">
+                                 <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                    <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
+                                    <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                       <i class="fa fa-times fa-lg"></i>
+                                    </button>
+                                 </div>
+                                 <div class="modal-body">
+                                    <div class="card">
+                                       <div class="card-body pb-0">
+                                          <h5 class="card-title">${item.descricao}</h5>
+                                          <p class="card-text">
+                                             <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
+                                             <strong>ID:</strong> ${item.id} <br/>
+                                             <strong>Tombo:</strong> ${item.tombo} <br/>
+                                             <strong>Data de Entrada:</strong> ${new Date(item.data_de_entrada).toLocaleDateString('pt-BR')} <br/>
+                                             <strong>Categoria:</strong> ${item.categoria} <br/>
+                                             <strong>Doc Origem:</strong> ${item.doc_origem} <br/>
+                                             <strong>Estoque:</strong> ${item.estoque} <br/>
+                                             <strong>Valor:</strong> ${parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })} <br/>
+                                             <strong>Situação:</strong> ${item.situacao} <br/>
+                                             <strong>Observação:</strong> ${item.observacao || 'N/A'} <br/>
+                                          </p>
+                                       </div>
+                                    </div>
                                  </div>
                               </div>
-                              </div>
                            </div>
-                        </div>
-                     </div>
-                     `;
-
+                        </div>`;
                      const modalDiv = document.createElement('div');
                      modalDiv.innerHTML = modalHtml;
                      document.body.appendChild(modalDiv);
@@ -205,7 +212,6 @@
                         backdrop: true,
                         focus: true
                      });
-
                      infoTomboModal.show();
 
                      infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
@@ -213,32 +219,29 @@
                      });
                   }
                } catch (error) {
-                  console.error('Erro ao buscar informações do tombo:', error);
+                  console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
+                  alert('Erro ao carregar os detalhes. Verifique o console para mais informações.');
                }
             });
          });
 
-         // Adicionar evento para o botão de exportação
+         // Evento para o botão de exportação
          const exportarBtn = document.getElementById('exportarBtn');
          exportarBtn.addEventListener('click', (event) => {
             event.preventDefault();
             const formato = document.getElementById('formato').value;
             window.location.href = `/relatorio/geral?formato=${formato}`;
          });
-      });
-   </script>
 
-   <script>
-      document.addEventListener('DOMContentLoaded', () => {
+         // Evento para os botões de exclusão
          const deleteButtons = document.querySelectorAll('.btn-delete');
-
          deleteButtons.forEach(button => {
             button.addEventListener('click', async (event) => {
                event.preventDefault();
 
                const confirmation = confirm("Você tem certeza que deseja excluir este item? Esse processo é irreversível.");
                if (!confirmation) {
-                  return; // Se o usuário cancelar, não faça nada
+                  return;
                }
 
                const url = event.target.href;
@@ -248,7 +251,7 @@
 
                   if (response.ok) {
                      alert('Item deletado com sucesso!');
-                     location.reload(); // Atualiza a página para refletir a exclusão
+                     location.reload();
                   } else {
                      alert(result.msg);
                   }
